<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GymLog</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_exercise">New exercise</string>
    <string name="new_workout">New workout</string>
    <string name="review_exercise">Review Exercise</string>
    <string name="review_workout">Review workout</string>
    <string name="add_exercise">Add exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="category">Category</string>
    <string name="description">Type exercise description here</string>
    <string name="exercise_search">Search for an exercise</string>
    <string name="delete">Delete</string>
    <string name="cartman_picture">A sweet picture of Cartman</string>
    <string name="reps">Repetitons</string>
    <string name="log">Log</string>
    <string name="exercise_in_progress">Exercise in progress</string>
    
    <string-array name="measurements">
        <item>kg</item>
        <item>lbs</item>
        <item>level</item>
        <item>none</item>
    </string-array>

</resources>