<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bAddExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise" />

        <EditText
            android:inputType="text"
            android:id="@+id/eTExerciseAdded"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:gravity="right"
            android:ems="10" />

    </LinearLayout>

    <EditText
        android:id="@+id/eTExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/exercise_name" >

        <requestFocus />
    </EditText>

    <AutoCompleteTextView
        android:id="@+id/aCTVCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/category" />

    <EditText
        android:id="@+id/eTDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.11"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

</LinearLayout>